[PLATFORM-1445] Fix product page layout breaking on small screens (#1057)
* Make TimeSeriesGraph responsive
* Make product page work on smaller screens

--- a/app/src/userpages/components/ProductsPage/Stats/stats.pcss
+++ b/app/src/userpages/components/ProductsPage/Stats/stats.pcss
@@ -20,9 +20,14 @@
 }
 
 .graphBox {
+  display: grid;
   background: white;
   border-radius: 4px;
   padding: 1.5rem 2.5rem;
+}
+
+.graph {
+  height: 300px;
 }
 
 .searchPlaceholder {
